Refactored VirtualFlight.js to server.js (nodejs norm) and made stream size fit to screen

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Parrot AR 2.0 Stream</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="/dronestream/nodecopter-client.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
-    <div id="droneStream" style="width: 1280px; height: 720px">   </div>
+    <div id="droneStream"></div>
     <script type="text/javascript" charset="utf-8">
         new NodecopterStream(document.getElementById("droneStream"));
     </script>
