web api is working with keypress

--- a/public/index.html
+++ b/public/index.html
@@ -5,25 +5,37 @@
     <title>Parrot AR 2.0 Stream</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="/dronestream/nodecopter-client.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="./scripts/jquery.min.js"></script>
     <script>
     $(document).on('keydown', function(ev) {
+        var command;
     	if(ev.keyCode === 87){
-    		console.log("w was pressed");
+            command = "ascend";
     	}
-    	if(ev.keyCode === 83){
-    		console.log("s was pressed");
+    	else if(ev.keyCode === 83){
+            command = "descend";
     	}
+        else if(ev.keyCode == 32) {
+            command = "power";
+        }
+        else {
+            return;
+        }
+        var data = JSON.stringify({"command":command});
+        var url = "/drone";
+        console.log(data);
+        
+        $.ajax({
+          type: "POST",
+          url: url,
+          data: data,
+          contentType: "application/json"
+        });
     });
 
-    $(document).on('keyup', function(ev) {
-    	if(ev.keyCode === 87){
-    		console.log("w was released");
-    	}
-    	if(ev.keyCode === 83){
-    		console.log("s was released");
-    	}
-    });
+
+
+
     </script>
 </head>
 <body>
