pushing for sam

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,28 @@
         else if(ev.keyCode == 80) {
             command = "pause";
         }
+
+        //TEMPORARY
+        else if(ev.keyCode == 65) {
+            command = "left";
+        }
+        else if(ev.keyCode == 68) {
+            command = "right";
+        }
+        else if(ev.keyCode == 37) {
+            command = "rollleft";
+        }
+        else if(ev.keyCode == 38) {
+            command = "rollright";
+        }
+        else if(ev.keyCode == 39) {
+            command = "forward";
+        }
+        else if(ev.keyCode == 40) {
+            command = "back";
+        }
+
+
         else {
             return;
         }
